Fixed broken CSS + merged in signup route w/ db

--- a/client/src/components/switchmodes.css
+++ b/client/src/components/switchmodes.css
@@ -13,6 +13,14 @@
     
 }
 
+.canvas {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    padding: 20px; 
+}
+
 .back {
     transform: rotateY(180deg);
 }
